--- a/client/public/index.html
+++ b/client/public/index.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" xmlns="http://www.w3.org/1999/xhtml"
-xmlns:fb="http://ogp.me/ns/fb#">
+<html lang="en" xmlns="http://www.w3.org/1999/xhtml">
   <head>
   <script>
     window.dataLayer = window.dataLayer || [];
@@ -13,7 +12,7 @@ xmlns:fb="http://ogp.me/ns/fb#">
     <meta name="title" content="" />
     <meta
       name="description"
-      content=""
+      content="ra-video stream"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <meta property="og:image" content="%PUBLIC_URL%/og-screenshot.png" />
